# sparkplug

./: Cargo.toml  Makefile  README.md
src/: lib.rs  spot.rs
